[policy] replace Map.of defaults for Java 8 compatibility